Fixed Home page latest projects card alignment
- Home page latest projects' project cards were misaligned when view ports were < 768 and especially when < 600 & mobile.

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -86,16 +86,9 @@
     padding-top: 80px;
     width: 80%;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-.homeProjectsFlex {
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    align-items: center;
-    justify-content:space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
 }
 
 .tempImage {
@@ -280,6 +273,10 @@
         letter-spacing: 1px;
     }
 
+    .homeLatestProjectsContainer {
+        gap: 30px;
+    }
+
     
 
     /**********************************************************************************************
@@ -358,6 +355,10 @@
         font-size: 14px;
     }
 
+    .homeLatestProjectsContainer {
+        gap: 30px;
+    }
+
     /**********************************************************************************************
         Home About us Section
     ***********************************************************************************************/
@@ -432,6 +433,10 @@
         font-size: 14px;
         padding-top: 10px;
         letter-spacing: 1px;
+    }
+
+    .homeLatestProjectsContainer {
+        gap: 30px;
     }
 
     /**********************************************************************************************
@@ -634,6 +639,11 @@
     .HomeProjectLink {
         padding: 4%;
         font-size: 15px;
+    }
+
+    .homeLatestProjectsContainer {
+        grid-template-columns: 1fr;
+        gap: 30px;
     }
 
     /**********************************************************************************************
